--- a/frontend/src/features/styles/singlepageproject.css
+++ b/frontend/src/features/styles/singlepageproject.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+@layer utilities {
+  .bg-gradient-turquoise-blue {
+    background: #1a2980;
+    background: -webkit-linear-gradient(to right, #26d0ce, #1a2980);
+    background: linear-gradient(to right, #26d0ce, #1a2980);
+  }
+}
+
 @layer components {
   .main-mobile {
     @apply max-w-95 mx-auto my-10 flex flex-col gap-10;
@@ -18,15 +26,22 @@
   }
 
   .headline-standard {
-    @apply text-shadow-lg/30 font-semibold text-3xl;
+    @apply text-shadow-lg/30 font-semibold text-3xl text-center;
   }
 
   .section-container {
     @apply relative bg-[#FDFFFF] rounded-md p-10 overflow-hidden;
   }
 
+  .testimonial-container {
+    @apply grid gap-8 md:grid-cols-2 lg:grid-cols-3 items-start;
+  }
+
   .img-mobile {
     @apply h-36 w-36 rounded-full shadow-black shadow-2xl;
+  }
+  .img-testimonial {
+    @apply rounded-md absolute -top-5 left-1/2 transform -translate-x-1/2 md:-top-10 md:translate-x-0 md:-left-10;
   }
 
   .name-lg {
@@ -47,6 +62,14 @@
 
   .lg-container {
     @apply lg:max-w-4xl;
+  }
+
+  .div-modal {
+    @apply fixed inset-0 bg-gray-700/60 backdrop-blur-sm flex items-center justify-center z-50;
+  }
+
+  .close-btn {
+    @apply bg-red-600 absolute -top-2 -right-2 rounded-full w-8 h-8 cursor-pointer hover:bg-red-500;
   }
 }
 
