--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,7 @@
 @import "tailwindcss";
 
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   background-color: #b3c4c5;
 }
 
