--- a/frontend/src/features/styles/singlepageproject.css
+++ b/frontend/src/features/styles/singlepageproject.css
@@ -1,13 +1,5 @@
 @import "tailwindcss";
 
-@layer utilities {
-  .bg-gradient-turquoise-blue {
-    background: #1a2980;
-    background: -webkit-linear-gradient(to right, #26d0ce, #1a2980);
-    background: linear-gradient(to right, #26d0ce, #1a2980);
-  }
-}
-
 @layer components {
   .main-mobile {
     @apply max-w-95 mx-auto my-10 flex flex-col gap-10;
@@ -26,7 +18,7 @@
   }
 
   .headline-standard {
-    @apply text-shadow-lg/30 font-semibold text-3xl text-center;
+    @apply text-shadow-md font-semibold text-3xl text-center;
   }
 
   .section-container {
@@ -101,5 +93,5 @@
 }
 
 .animate-slide {
-  animation: animate-slide 21s infinite cubic-bezier(0.9, 0.01, 0.3, 0.99);
+  animation: animate-slide 10s linear infinite;
 }
